--- a/package.json
+++ b/package.json
@@ -10,16 +10,23 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "@types/jquery": "^3.3.38",
+        "@types/semantic-ui": "^2.2.7",
+        "@types/webpack-env": "^1.15.2",
         "axios": "^0.19",
         "cross-env": "^7.0.2",
+        "css-loader": "^3.5.3",
         "jquery": "^3.5.1",
         "laravel-mix": "^5.0.4",
         "lodash": "^4.17.13",
-        "resolve-url-loader": "^2.3.1",
+        "resolve-url-loader": "^3.1.0",
         "sass": "^1.26.8",
         "sass-loader": "^7.3.1",
         "semantic-ui-css": "^2.4.1",
+        "ts-loader": "^7.0.5",
+        "typescript": "^3.9.5",
         "vue": "^2.5.17",
+        "vue-class-component": "^7.2.3",
         "vue-router": "^3.3.2",
         "vue-template-compiler": "^2.6.10",
         "vuex": "^3.4.0"
