--- a/package.json
+++ b/package.json
@@ -2,36 +2,53 @@
     "private": true,
     "scripts": {
         "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --config=node_modules/laravel-mix/setup/webpack.config.js",
         "watch": "npm run development -- --watch",
         "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --disable-host-check --config=node_modules/laravel-mix/setup/webpack.config.js",
         "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "test": "BABEL_ENV=test mochapack --webpack-config node_modules/laravel-mix/setup/webpack.config.js --colors --require resources/js/Tests/setup.js \"resources/js/Tests/**/*.spec.js\"",
+        "inspect": "node --inspect-brk node_modules/mochapack/bin/mochapack --webpack-config node_modules/laravel-mix/setup/webpack.config.js --require resources/js/Tests/setup.js \"resources/js/Tests/**/*.spec.js\""
     },
     "devDependencies": {
-        "@types/jquery": "^3.3.38",
+        "@babel/preset-env": "^7.13.5",
+        "@testing-library/vue": "^5.0.0",
+        "@types/hammerjs": "^2.0.36",
+        "@types/jquery": "^3.5.5",
+        "@types/lodash.clonedeep": "^4.5.6",
         "@types/semantic-ui": "^2.2.7",
-        "@types/webpack-env": "^1.15.2",
-        "axios": "^0.19",
-        "cross-env": "^7.0.2",
-        "css-loader": "^3.5.3",
+        "@types/webpack-env": "^1.16.0",
+        "axios": "^0.21.1",
+        "cross-env": "^7.0.3",
+        "css-loader": "^3.0.0",
+        "expect": "^26.6.2",
+        "fomantic-ui-css": "^2.8.7",
+        "hammerjs": "^2.0.8",
         "jquery": "^3.5.1",
+        "js-beautify": "^1.13.5",
+        "jsdom": "^16.0.0",
+        "jsdom-global": "^3.0.2",
         "laravel-mix": "^5.0.4",
-        "lodash": "^4.17.13",
+        "lodash": "^4.17.20",
+        "mocha": "^8.0.0",
+        "mochapack": "^2.0.6",
+        "moxios": "^0.4.0",
+        "prettier": "^2.3.0",
         "resolve-url-loader": "^3.1.0",
-        "sass": "^1.26.8",
-        "sass-loader": "^7.3.1",
-        "semantic-ui-css": "^2.4.1",
-        "ts-loader": "^7.0.5",
-        "typescript": "^3.9.5",
-        "vue": "^2.5.17",
-        "vue-class-component": "^7.2.3",
-        "vue-router": "^3.3.2",
-        "vue-template-compiler": "^2.6.10",
-        "vuex": "^3.4.0"
+        "rewiremock": "^3.14.3",
+        "sass": "^1.30.0",
+        "sass-loader": "^9.0.0",
+        "sinon": "^10.0",
+        "ts-loader": "^7.0.0",
+        "tslib": "^2.2.0",
+        "typescript": "^4.0",
+        "vue": "^2.6.12",
+        "vue-class-component": "^7.2.6",
+        "vue-router": "^3.4.9",
+        "vue-template-compiler": "^2.6.12",
+        "vuex": "^3.6.0"
     },
-    "dependencies": {},
     "bit": {
         "env": {
             "compiler": "bit.envs/compilers/vue@0.1.5"
