--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -3,6 +3,8 @@
     "/css/app.css": "/css/app.css",
     "/js/app.js.map": "/js/app.js.map",
     "/css/app.css.map": "/css/app.css.map",
+    "/HomePage.js": "/HomePage.js",
+    "/HomePage.js.map": "/HomePage.js.map",
     "/LandlordDetailView.js": "/LandlordDetailView.js",
     "/LandlordDetailView.js.map": "/LandlordDetailView.js.map",
     "/LandlordEditView.js": "/LandlordEditView.js",
@@ -11,6 +13,8 @@
     "/LandlordNewView.js.map": "/LandlordNewView.js.map",
     "/LandlordsListView.js": "/LandlordsListView.js",
     "/LandlordsListView.js.map": "/LandlordsListView.js.map",
+    "/NewUserView.js": "/NewUserView.js",
+    "/NewUserView.js.map": "/NewUserView.js.map",
     "/PropertiesView.js": "/PropertiesView.js",
     "/PropertiesView.js.map": "/PropertiesView.js.map",
     "/PropertyDetailView.js": "/PropertyDetailView.js",
@@ -30,5 +34,7 @@
     "/UserNewView.js": "/UserNewView.js",
     "/UserNewView.js.map": "/UserNewView.js.map",
     "/UsersView.js": "/UsersView.js",
-    "/UsersView.js.map": "/UsersView.js.map"
+    "/UsersView.js.map": "/UsersView.js.map",
+    "/vendors~TenantDetailView.js": "/vendors~TenantDetailView.js",
+    "/vendors~TenantDetailView.js.map": "/vendors~TenantDetailView.js.map"
 }
