--- a/package.json
+++ b/package.json
@@ -1,42 +1,31 @@
 {
     "private": true,
+    "type": "module",
     "scripts": {
-        "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --disable-host-check --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "test": "BABEL_ENV=test mochapack --webpack-config node_modules/laravel-mix/setup/webpack.config.js --colors --require resources/js/Tests/setup.js \"resources/js/Tests/**/*.spec.js\"",
-        "inspect": "node --inspect-brk node_modules/mochapack/bin/mochapack --webpack-config node_modules/laravel-mix/setup/webpack.config.js --require resources/js/Tests/setup.js \"resources/js/Tests/**/*.spec.js\""
+        "dev": "vite",
+        "build": "vue-tsc && vite build",
+        "test": "vitest",
+        "coverage": "vitest run --coverage"
     },
     "devDependencies": {
-        "@testing-library/vue": "^5.0.0",
-        "@types/hammerjs": "^2.0.36",
+        "@testing-library/vue": "^8.0.1",
         "@types/jquery": "^3.5.5",
-        "@types/lodash.clonedeep": "^4.5.6",
-        "@types/semantic-ui": "^2.2.7",
-        "axios": "^0.21.1",
-        "expect": "^26.6.2",
+        "@vitejs/plugin-vue": "^5.0.3",
+        "axios": "^1.6.7",
         "fomantic-ui-css": "^2.8.7",
-        "hammerjs": "^2.0.8",
         "jquery": "^3.5.1",
-        "js-beautify": "^1.13.5",
-        "jsdom": "^16.0.0",
-        "jsdom-global": "^3.0.2",
+        "jsdom": "^24.0.0",
+        "laravel-vite-plugin": "^1.0.1",
         "lodash": "^4.17.20",
-        "moxios": "^0.4.0",
-        "prettier": "^2.3.0",
         "sass": "^1.30.0",
-        "sinon": "^10.0",
         "tslib": "^2.2.0",
-        "typescript": "^4.0",
-        "vue": "^2.6.12",
-        "vue-class-component": "^7.2.6",
-        "vue-router": "^3.4.9",
-        "vue-template-compiler": "^2.6.12",
-        "vuex": "^3.6.0"
+        "typescript": "^5.3.3",
+        "vite": "^5.0.12",
+        "vitest": "^1.2.2",
+        "vue": "^3.4.15",
+        "vue-router": "^4.2.5",
+        "vue-tsc": "^1.8.27",
+        "vuex": "^4.1.0"
     },
     "bit": {
         "env": {
