--- a/.env.example
+++ b/.env.example
@@ -56,18 +56,22 @@ PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=mt1
 
-MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
+VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+# Basics to get Vite running
+VITE_APP_NAME="${APP_NAME}"
+VITE_APP_ENV=local
 
 # Replace below w/ heroku or netlify url
-MIX_BASE_URL=http://127.0.0.1:8000/
+VITE_BASE_URL=http://127.0.0.1:8000/
 
 # Map Services
-MIX_HERE_JS_API_KEY=
+VITE_HERE_JS_API_KEY=
 
 # Google secure Recaptcha services
-MIX_RECAPTCHA_SITE_KEY=
-MIX_RECAPTCHA_SECRET_KEY=
+VITE_RECAPTCHA_SITE_KEY=
+VITE_RECAPTCHA_SECRET_KEY=
 
-MIX_RECAPTCHA_V3_SITE_KEY=
-MIX_RECAPTCHA_V3_SECRET_KEY=
+VITE_RECAPTCHA_V3_SITE_KEY=
+VITE_RECAPTCHA_V3_SECRET_KEY=
