--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "coverage": "vitest run --coverage"
     },
     "devDependencies": {
+        "@testing-library/jest-dom": "^6.4.1",
         "@testing-library/vue": "^8.0.1",
         "@types/jquery": "^3.5.5",
         "@vitejs/plugin-vue": "^5.0.3",
