--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     },
     "devDependencies": {
         "@testing-library/jest-dom": "^6.4.1",
+        "@testing-library/user-event": "^14.5.2",
         "@testing-library/vue": "^8.0.1",
         "@types/jquery": "^3.5.5",
         "@vitejs/plugin-vue": "^5.0.3",
