--- a/package.json
+++ b/package.json
@@ -5,16 +5,23 @@
         "dev": "vite",
         "build": "vue-tsc && vite build",
         "test": "vitest",
-        "coverage": "vitest run --coverage"
+        "coverage": "vitest run --coverage",
+        "lint": "eslint --quiet",
+        "lint:strict": "eslint"
     },
     "devDependencies": {
+        "@eslint/js": "^9.5.0",
         "@testing-library/jest-dom": "^6.4.6",
         "@testing-library/user-event": "^14.5.2",
         "@testing-library/vue": "^8.1.0",
+        "@types/eslint__js": "^8.42.3",
         "@types/jquery": "^3.5.30",
         "@vitejs/plugin-vue": "^5.0.5",
         "axios": "^1.7.2",
+        "eslint": "^9.5.0",
+        "eslint-plugin-vue": "^9.26.0",
         "fomantic-ui-css": "^2.9.3",
+        "globals": "^15.6.0",
         "jquery": "^3.7.1",
         "jsdom": "^24.1.0",
         "laravel-vite-plugin": "^1.0.4",
@@ -22,6 +29,7 @@
         "sass": "^1.77.6",
         "tslib": "^2.6.3",
         "typescript": "^5.4.5",
+        "typescript-eslint": "^7.14.1",
         "vite": "^5.3.1",
         "vitest": "^1.6.0",
         "vue": "^3.4.29",
