--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.8.0",
+        "@stylistic/eslint-plugin": "^2.6.1",
         "@testing-library/jest-dom": "^6.4.8",
         "@testing-library/user-event": "^14.5.2",
         "@testing-library/vue": "^8.1.0",
